<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IDManager</string>
    <string name="txt_search">搜索</string>
    <string name="menu_import">导入</string>
    <string name="menu_export">导出</string>
    <string name="menu_upload">分享</string>
    <string name="settings">设置</string>
    <string name="version">版本</string>
    <string name="set">已设置</string>
    <string name="unset">未设置</string>
<!--    <string name="cancel">取消</string>-->
    <string name="gesture_password">手势密码</string>
    <string name="finger_scanner">指纹解锁</string>
    <string name="please_setup_and_open_gesture_password_first">请先设置并开启手势密码</string>
    <string name="please_setup_gesture_password_first">请先设置手势密码！</string>
    <string name="validating_finger_scanner">正在验证指纹</string>
    <string name="prompt">提示</string>
    <string name="close_gesture_psw_tip">关闭手势密码需要验证手势密码，且指纹密码也会关闭，确定要关闭吗？</string>
    <string name="not_detect_fingerprint_model">未检测到指纹模块</string>
    <string name="permission_access_failed">权限获取失败</string>
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <!-- Gesture code starting -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="please_set_new_unlock_pic">请绘制新的手势密码</string>
    <!-- End -->

    <string name="use_fingerprint_login">使用指纹登录</string>
    <string name="please_validate_finger_scanner">请验证指纹</string>
    <string name="validate_failure_more">失败次数过多,请稍后重试！</string>
    <string name="validate_success">验证成功</string>
    <string name="validate_failure">验证失败,请重试！</string>
    <string name="use_gesture_login">使用手势登录</string>

    <string name="clear_gesture_psw_tip">设置新的手势密码，还是取消手势密码？</string>
    <string name="set_new_psw">设置新密码</string>
    <string name="cancel_unlock_psw">取消手势密码</string>
    <string name="gesture_psw_have_cancel">手势密码已取消</string>

    <string name="input_id_info">输入ID信息</string>
    <string name="input_id">输入ID名</string>
    <string name="add_id">添加ID</string>
    <string name="o_k">确 定</string>
    <string name="can_cel">取 消</string>

</resources>
