<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hai.idmanager.MainActivity" >

    <item
        android:id="@+id/item_import"
        android:orderInCategory="100"
        android:title="@string/menu_import"
         />
    
    <item
        android:id="@+id/item_export"
        android:orderInCategory="100"
        android:title="@string/menu_export"
         />
    
    <item
        android:id="@+id/item_upload"
        android:orderInCategory="100"
        android:title="@string/menu_upload"
         />

    <item
        android:id="@+id/item_setup"
        android:orderInCategory="100"
        android:title="@string/settings"
        />

    <!--<item-->
        <!--android:id="@+id/item_about"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="关于"-->
        <!--/>-->

</menu>
