<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_gesture_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48423D">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setup_gesture_code"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="取消"
            android:textColor="@drawable/gesture_cancel_text_color"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/gesture_tip_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:gravity="center"
        android:orientation="vertical">

        <com.hai.idmanager.widget.gesture.LockIndicator
            android:id="@+id/lock_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/text_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="@string/set_gesture_pattern"
            android:textColor="#F98F12" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gesture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gesture_tip_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"/>

    <TextView
        android:id="@+id/text_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gesture_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:text="@string/set_gesture_pattern_reason"
        android:textColor="#816E6A" />

</RelativeLayout>
