<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/base_color"
    android:orientation="vertical"
    tools:context="com.hai.idmanager.view.setting.SettingActivity">

    <include layout="@layout/view_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray"/>

    <RelativeLayout
        android:id="@+id/rl_gesture"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/gesture_password"
            android:textSize="@dimen/txt_middleLager"/>
<!--        <TextView-->
<!--            android:id="@+id/tv_gestureSet"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:layout_toLeftOf="@+id/tb_gesturePsd"-->
<!--            android:text="@string/unset"-->
<!--            android:textSize="@dimen/txt_middleLager"/>-->
        <ToggleButton
            android:id="@+id/tb_gesturePsd"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_toggle_btn"
            android:checked="false"
            android:textOff=""
            android:textOn=""
            android:text=""
            android:layout_width="40dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray"/>
    <RelativeLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/finger_scanner"
            android:textSize="@dimen/txt_middleLager"/>
        <ToggleButton
            android:id="@+id/tb_fingerScanner"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_toggle_btn"
            android:checked="false"
            android:textOff=""
            android:textOn=""
            android:text=""
            android:layout_width="40dp"
            android:layout_height="25dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/bg_gray"/>
    <RelativeLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/version"
            android:textSize="@dimen/txt_middleLager"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/txt_middleLager"
            android:text="1.0"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray"/>

</LinearLayout>
